Bug 1136242 - Make sure we acquire the mutexes when copying the surfaces. r=jgilbert, a=lsblakk

This was causing badness when using preserveDrawingBuffers = true

--HG--
extra : rebase_source : 920a13ba03088f6e5662382683967e9b4f8c8b6a